// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HitsPerPage renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisHitsPerPage]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hits-per-page>
      
      
      
      <div
        class="ais-ResultsPerPage"
      >
        
        
        <select
          class="ais-ResultsPerPage-select"
        >
          
          
          
          <option
            class="ais-ResultsPerPage-option"
            value="10"
          >
            
            10 per page
          
          </option>
          <option
            class="ais-ResultsPerPage-option"
            value="20"
          >
            
            20 per page
          
          </option>
          <option
            class="ais-ResultsPerPage-option"
            value="30"
          >
            
            30 per page
          
          </option>
          
        
        </select>
        
      
      </div>
      
    
    </ng-ais-hits-per-page>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`HitsPerPage renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisHitsPerPage]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hits-per-page>
      
      
      
      <div
        class="ais-ResultsPerPage"
      >
        
        
        <select
          class="ais-ResultsPerPage-select"
        >
          
          
          
          
        
        </select>
        
      
      </div>
      
    
    </ng-ais-hits-per-page>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`HitsPerPage should be hidden with autoHideContainer 1`] = `
<ng-component
  testedWidget={[Function NgAisHitsPerPage]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hits-per-page>
      
      
      
      
    
    </ng-ais-hits-per-page>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
